--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <!-- Icon -->
+    <link rel="icon" href="http://i58.tinypic.com/302rtyg.png" type="image/png">
+    <title>Dick-Show-Nary</title>
 </head>
 
 <body>
